# llm_rpa_dev_demo

./: pyproject.toml  requirements.txt  rpa_v0.py  rpa_v0_documentation.md
artifacts/0b2cde9e53/: audit.jsonl
artifacts/0f45b3c5e7/: audit.jsonl
artifacts/681441bb2a/: audit.jsonl  report.md
